updated actuator info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 
-info.app.name=${APP_NAME:Data Rest}
-info.app.description=Sample Spring Boot Application using Spring Data REST
+info.app.name=${APP_NAME:Data REST}
+info.app.description=Spring Boot Application using Spring Data REST
 info.app.version=1.0
